2008-07-07  Stefan Kost  <ensonic@users.sf.net>

	* gst/rtp/gstrtpvrawdepay.c:
	  Include stdlib.h for atoi().

	* gst/rtsp/gstrtspsrc.c:
	  Use floating point math for latencies < 0 sec in log output.

2008-07-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Tomasz Grobelny <tomasz at grobelny dot oswiecenia dot net>

	* gst/rtp/gstrtpspeexdepay.c: (gst_rtp_speex_depay_init),
	(gst_rtp_speex_depay_process):
	* gst/rtp/gstrtpspeexdepay.h:
	Take timestamp from the RTP packet as a first step to fix problems
	with transmission over RTP when the network is not reliable.
	Fixes bug #541787.

2008-07-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Tero Saarni <tero dot saarni at gmail dot com>

	* gst/udp/gstudpsrc.c: (gst_udpsrc_set_uri):
	Fix parsing of udp:// URIs containing IPv6 addresses.
	Fixes bug #541650.

2008-07-04  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* ext/gdk_pixbuf/gstgdkpixbuf.c: (gst_gdk_pixbuf_chain):
	Do not leak incoming buffers.

2008-07-03  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Damien Lespiau <damien dot lespiau at gmail dot com>

	* configure.ac:
	Fix build of the RTP plugin with mingw32 by linking to ws2_32
	for htons() and htonl(). Fixes bug #541412.

2008-07-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_class_init),
	(gst_matroska_demux_add_stream), (gst_matroska_demux_query),
	(gst_matroska_demux_element_query),
	(gst_matroska_demux_handle_src_query),
	(gst_matroska_demux_handle_seek_event):
	Handle position and duration query in DEFAULT format if the
	pad's track has a default frame duration set.

	Fix seeking now that the segment's duration doesn't contain the
	(possibly wrong or inaccurate) duration of the Matroska file.

2008-07-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/ebml-read.c: (_ext2dbl):
	Use NAN constant instead of 0.0/0.0 if possible. NAN is defined